# it-akademie

./: README.md  pyproject.toml
multicall/: multicall.py
request_simulator/: request_simulator_async.py  request_simulator_sync.py
threads_processes/: basic.py  processes.py  threads.py
